# anthy-unicode

./: meson.build  meson_options.txt
calctrans/: meson.build
depgraph/: meson.build  mkdepgraph.c
mkworddic/: mkdic.c
src-util/: meson.build
